--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-<h1>sudha</h1>
-<img src="sudha.jpeg"
+<!DOCTYPEhtml>
+<head>
+    <tittle>website</tittle>
+    </head>
+    <body>
+         <h1>KITE Student: your name</h1>
+         <img src="sudha.jpeg">
+         </body>
