--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <tittle>website</tittle>
     </head>
     <body>
-         <h1>KITE Student: your name</h1>
+         <h1>KITE Student:Sudha </h1>
          <img src="sudha.jpeg">
          </body>
